--- a/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Sản phẩm</title>
+    <title>Quản Lý Danh Mục </title>
     <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
@@ -17,33 +17,31 @@
 <div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
     <div class="wrapper col-md-9 container mt-4" >
-        <h1 class="tittle mb-4">Quản lý danh mục</h1>
+        <h1 class="tittle mb-4">Quản Lý Danh Mục</h1>
         <div class="form-mb-4">
             <div class="search-container">
                 <form class="search-form" action="/Admin/category-manager" method="get">
                     <select class="input-select" name="filter">
                         <option value="name">Tên danh mục</option>
                     </select>
-                    <input class="form-control form-control-sm" type="text" name="keyword" placeholder="Tìm kiếm danh mục..." aria-label="Search">
+                    <input class="form-control form-control-sm" type="text" name="keyword" placeholder="Nhập thông tin cần tìm..." aria-label="Search">
                     <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
-                    Thêm Danh Mục
-                </button>
+                <a href="/Admin/category-manager/create" class="btn-create btn btn-success">Thêm Danh Mục</a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
-                <th>ID</th>
+                <th>STT</th>
                 <th>Tên Danh Mục</th>
                 <th>Mô Tả</th>
                 <th>Ngày Tạo</th>
                 <th>Cập Nhật Lần Cuối</th>
-                <th>Thao tác</th>
+                <th>Thao Tác</th>
             </tr>
             </thead>
             <tbody>
@@ -75,56 +73,14 @@
             </tbody>
         </table>
     </div>
-    <!-- Modal Thêm Thương Hiệu -->
-    <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="addBrandModalLabel">Thêm category</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="addBrandForm" th:action="@{/Admin/add-categoryManager}" method="post" th:object="${categorys}">
-                        <!-- Tên thương hiệu -->
-                        <div class="mb-3">
-                            <label class="form-label">Tên </label>
-                            <input type="text" class="form-control" th:field="*{name}" required>
-
-                        </div>
-                        <!-- Mô tả -->
-                        <div class="mb-3">
-                            <label class="form-label">Mô tả</label>
-                            <input type="text" class="form-control" th:field="*{description}" required>
-
-                        </div>
-
-                        <button type="submit" class="btn btn-primary">Lưu</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
         document.body.classList.toggle('sidebar-collapsed');
     });
-
-</script>
-<script th:inline="javascript">
-    window.onload = function () {
-        var showModal = /*[[${showModal}]]*/ false;
-        if (showModal) {
-            var modal = new bootstrap.Modal(document.getElementById('addBrandModal'));
-            modal.show();
-        }
-    }
 </script>
 </body>
 </html>
