--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/addEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/addEmployee.html
@@ -24,7 +24,7 @@
                         <h3 class="mb-0">Thêm Nhân Viên</h3>
                     </div>
                     <div class="card-body">
-                        <form th:action="@{/employees/create}" method="POST" th:object="${employeeDTO}"
+                        <form th:action="@{/Admin/employee-manager/create}" method="POST" th:object="${employeeDTO}"
                               class="needs-validation" novalidate>
                             <div class="mb-3">
                                 <label for="employeeName" class="form-label">Họ và Tên :</label>
