--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Sản phẩm</title>
+    <title>Quản Lý Sản Phẩm</title>
     <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
@@ -61,15 +61,13 @@
                         <option value="name" th:selected="${searchType == 'name'}">Tên sản phẩm</option>
                         <option value="category" th:selected="${searchType == 'category'}">Danh mục</option>
                     </select>
-                    <input class="form-control form-control-sm me-2" type="text" name="keyword" placeholder="Tìm kiếm sản phẩm..." aria-label="Search">
+                    <input class="form-control form-control-sm me-2" type="text" name="keyword" placeholder="Nhập thông tin cần tìm..." aria-label="Search">
                     <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
+                <a href="/Admin/product-manager/create" class="btn-create btn btn-success">Thêm Nhân Viên</a>
             </div>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
-                Thêm Sản Phẩm
-            </button>
             <div class="filter-container mt-3 d-flex align-items-center">
                 <label class="me-2">Lọc theo giá:</label>
                 <form method="GET" action="/Admin/product-manager" class="d-flex">
@@ -78,7 +76,6 @@
                     <button class="btn btn-primary btn-sm" type="submit">Lọc</button>
                 </form>
             </div>
-
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
         <div th:if="${message}" class="alert alert-success alert-dismissible fade show" role="alert">
@@ -88,13 +85,13 @@
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
-                <th>ID</th>
-                <th>Hình ảnh </th>
-                <th>Tên sản phẩm</th>
+                <th>STT</th>
+                <th>Hình Ảnh </th>
+                <th>Tên Sản Phẩm</th>
                 <th>Giá</th>
-                <th>Danh mục</th>
-                <th>Thương hiệu</th>
-                <th>Thao tác</th>
+                <th>Danh Mục</th>
+                <th>Thương Hiệu</th>
+                <th>Thao Tác</th>
             </tr>
             </thead>
             <tbody>
@@ -127,63 +124,6 @@
             </tbody>
         </table>
     </div>
-    <!-- Modal Thêm Sản phẩm  -->
-    <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="addBrandModalLabel">Thêm Sản Phẩm mới</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="addBrandForm" th:action="@{/Admin/product-manager/add}"
-                          method="post" th:object="${product}" enctype="multipart/form-data">
-
-                        <div class="mb-3">
-                            <label class="form-label">Tên Sản Phẩm</label>
-                            <input type="text" class="form-control" th:field="*{name}" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Chọn Ảnh</label>
-                            <input type="file" name="file" accept="image/*" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Giá</label>
-                            <input type="number" class="form-control" th:field="*{price}" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Mô tả</label>
-                            <input type="text" class="form-control" th:field="*{description}" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Danh mục</label>
-                            <select class="form-control" th:field="*{category}">
-                                <option value="">-- Chọn danh mục --</option>
-                                <option th:each="c : ${categories}" th:value="${c.categoryID}" th:text="${c.name}"></option>
-
-
-                            </select>
-                        </div>
-
-                        <!-- Chọn thương hiệu -->
-                        <div class="mb-3">
-                            <label class="form-label">Thương hiệu</label>
-                            <select class="form-control" th:field="*{brand}">
-                                <option value="">-- Chọn thương hiệu --</option>
-                                <option th:each="c: ${brand}" th:value="${c.brandID}" th:text="${c.name}"></option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Lưu</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
@@ -193,6 +133,5 @@
         document.body.classList.toggle('sidebar-collapsed');
     });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
