fix loi đã xong

--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title th:text="#{login.title}"></title>
+<!--  <title th:text="#{login.title}"></title>-->
 </head>
 <body>
 
