--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quản Lý Thương Hiệu </title>
+  <title>Quản lý Sản phẩm</title>
   <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
   <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
   <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
@@ -17,14 +17,14 @@
 <div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
   <div class="wrapper col-md-9 container mt-4">
-    <h1 class="tittle mb-4">Quản Lý Thương Hiệu </h1>
+    <h1 class="tittle mb-4">Quản lý thương hiệu</h1>
     <div class="form-mb-4">
       <div class="search-container">
         <form class="search-form">
           <select class="input-select">
             <option value="0">Tên thương hiệu</option>
           </select>
-          <input class="form-control form-control-sm" type="search" name="keyword" placeholder=" Nhập thông tin cần tìm ..." aria-label="Search">
+          <input class="form-control form-control-sm" type="search" name="keyword" placeholder="Tìm kiếm thương hiệu..." aria-label="Search">
           <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
             <i class="fas fa-search"></i>
           </button>
@@ -39,13 +39,13 @@
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
       <tr>
-        <th>STT</th>
+        <th>ID</th>
         <th>Tên Thương Hiệu</th>
-        <th>Xuất Xứ</th>
-        <th>Mô Tả</th>
+        <th>Xuất xứ</th>
+        <th>Mô tả</th>
         <th>Ngày Tạo</th>
         <th>Cập Nhật Lần Cuối</th>
-        <th>Thao Tác</th>
+        <th>Thao tác</th>
       </tr>
       </thead>
       <tbody>
@@ -75,52 +75,57 @@
       </tbody>
     </table>
   </div>
-  <!--  &lt;!&ndash; Modal Thêm Thương Hiệu &ndash;&gt;-->
-  <!--  <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">-->
-  <!--    <div class="modal-dialog">-->
-  <!--      <div class="modal-content">-->
-  <!--        <div class="modal-header">-->
-  <!--          <h5 class="modal-title" id="addBrandModalLabel">Thêm Thương Hiệu Mới</h5>-->
-  <!--          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-  <!--        </div>-->
-  <!--        <div class="modal-body">-->
-  <!--          <form id="addBrandForm" th:action="@{/Admin/add-brandManager}" method="post" th:object="${brand}">-->
-  <!--            &lt;!&ndash; Tên thương hiệu &ndash;&gt;-->
-  <!--            <div class="mb-3">-->
-  <!--              <label class="form-label">Tên Thương Hiệu</label>-->
-  <!--              <input type="text" class="form-control" th:field="*{name}" required>-->
-  <!--              <small class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></small>-->
-  <!--            </div>-->
+  <!-- Modal Thêm Thương Hiệu -->
+  <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addBrandModalLabel">Thêm Thương Hiệu Mới</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="addBrandForm" th:action="@{/Admin/brand-manager/add}" method="post" th:object="${brand}">
+            <!-- Tên thương hiệu -->
+            <div class="mb-3">
+              <label class="form-label">Tên Thương Hiệu</label>
+              <input type="text" class="form-control" th:field="*{name}" required>
+              <p th:if="${#fields.hasErrors('name') }" th:errors="*{name}" style="color: red"></p>
+            </div>
 
-  <!--            &lt;!&ndash; Xuất xứ &ndash;&gt;-->
-  <!--            <div class="mb-3">-->
-  <!--              <label class="form-label">Xuất xứ</label>-->
-  <!--              <input type="text" class="form-control" th:field="*{country}" required>-->
-  <!--              <small class="text-danger" th:if="${#fields.hasErrors('country')}" th:errors="*{country}" style="color: red"></small>-->
-  <!--            </div>-->
+            <!-- Xuất xứ -->
+            <div class="mb-3">
+              <label class="form-label">Xuất xứ</label>
+              <input type="text" class="form-control" th:field="*{country}" required>
+              <p th:if="${#fields.hasErrors('country')}" th:errors="*{country}" style="color: red"></p>
+            </div>
 
-  <!--            &lt;!&ndash; Mô tả &ndash;&gt;-->
-  <!--            <div class="mb-3">-->
-  <!--              <label class="form-label">Mô tả</label>-->
-  <!--              <input type="text" class="form-control" th:field="*{description}" required>-->
-  <!--              <small class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red"></small>-->
-  <!--            </div>-->
+            <!-- Mô tả -->
+            <div class="mb-3">
+              <label class="form-label">Mô tả</label>
+              <input type="text" class="form-control" th:field="*{description}" required>
+              <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red"></p>
+            </div>
 
-  <!--            <button type="submit" class="btn btn-primary">Lưu</button>-->
-  <!--          </form>-->
-  <!--        </div>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--  </div>-->
+            <button type="submit" class="btn btn-primary">Lưu</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
   // Toggle sidebar
   document.getElementById('sidebar-toggle').addEventListener('click', () => {
     document.body.classList.toggle('sidebar-collapsed');
   });
+
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
 </body>
 </html>
