--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/editBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/editBrand.html
@@ -31,6 +31,11 @@
                                 <input type="text" class="form-control" id="name" name="name" th:field="*{name}" required>
                                 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
                             </div>
+                            <div class="mb-3">
+                                <label for="country" class="form-label">Xuất xứ</label>
+                                <input type="text" class="form-control" id="country" name="country" th:field="*{country}" required>
+                                <p th:if="${#fields.hasErrors('country')}" th:errors="*{name}"></p>
+                            </div>
                             <div class="d-grid">
                                 <button type="submit" class="btn btn-danger btn-lg">Chỉnh sửa thương hiệu</button>
                             </div>
