--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
@@ -39,10 +39,10 @@
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
       <tr>
+        <th><input type="checkbox" id="selectAll"></th>
         <th>STT</th>
         <th>Tên Thương Hiệu</th>
         <th>Xuất Xứ</th>
-        <th>Mô Tả</th>
         <th>Ngày Tạo</th>
         <th>Cập Nhật Lần Cuối</th>
         <th>Thao Tác</th>
@@ -50,10 +50,10 @@
       </thead>
       <tbody>
       <tr th:each="brand : ${brands}">
+        <td><input type="checkbox" class="brandCheckbox" th:value="${brand.brandID}"></td>
         <td th:text="${brand.brandID}"></td>
         <td th:text="${brand.name}"></td>
         <td th:text="${brand.country}"></td>
-        <td th:text="${brand.description}"></td>
         <td th:text="${#temporals.format(brand.createAt, 'dd-MM-yyyy HH:mm')}"></td>
         <td th:text="${#temporals.format(brand.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
         <td>
@@ -61,14 +61,7 @@
             <i class="fas fa-edit"></i>
           </a>
           <!-- Nút Xóa (Icon thùng rác) -->
-          <form th:action="@{/admin-home/brand-manager/delete/{brandId}(brandId=${brand.brandID})}"
-                method="post"
-                class="d-inline"
-                onsubmit="return confirmDelete();">
-            <button type="submit" class="btn btn-danger btn-sm" title="Xóa">
-              <i class="fas fa-trash"></i>
-            </button>
-          </form>
+          <button type="button" id="deleteBtn" class="btn btn-danger mt-2" style="display: none;" onclick="disableSelectedBrand()">Xóa nhân viên</button>
         </td>
 
       </tr>
