--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
@@ -39,7 +39,10 @@
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
       <tr>
-        <th><input type="checkbox" id="selectAll"></th>
+        <th>
+          <input type="checkbox" id="selectAll" class="form-check-input">
+          <i class="bi bi-check2-square"></i>
+        </th>
         <th>STT</th>
         <th>Tên Thương Hiệu</th>
         <th>Xuất Xứ</th>
@@ -49,9 +52,16 @@
       </tr>
       </thead>
       <tbody>
-      <tr th:each="brand : ${brands}">
-        <td><input type="checkbox" class="brandCheckbox" th:value="${brand.brandID}"></td>
-        <td th:text="${brand.brandID}"></td>
+      <tr th:each="brand, b : ${brands}">
+        <td>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input brandCheckbox" th:value="${brand.brandID}" id="brandCheck-${b.index}">
+            <label class="form-check-label" th:for="'brandCheck-' + ${b.index}">
+              <i class="bi bi-check-square"></i>
+            </label>
+          </div>
+        </td>
+        <td th:text="${b.index + 1}"></td>
         <td th:text="${brand.name}"></td>
         <td th:text="${brand.country}"></td>
         <td th:text="${#temporals.format(brand.createAt, 'dd-MM-yyyy HH:mm')}"></td>
@@ -60,13 +70,11 @@
           <a th:href="@{/Admin/brand-manager/edit/{brandId}(brandId=${brand.brandID})}" class="btn btn-warning btn-sm" title="Chỉnh sửa">
             <i class="fas fa-edit"></i>
           </a>
-          <!-- Nút Xóa (Icon thùng rác) -->
-          <button type="button" id="deleteBtn" class="btn btn-danger mt-2" style="display: none;" onclick="disableSelectedBrand()">Xóa nhân viên</button>
         </td>
-
       </tr>
       </tbody>
     </table>
+    <button type="button" id="deleteBtn" class="btn btn-danger btn-sm" title="Xóa" onclick="deleteSelectedBrand()">Xóa thương hiệu</button>
   </div>
   <!--  &lt;!&ndash; Modal Thêm Thương Hiệu &ndash;&gt;-->
   <!--  <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">-->
@@ -108,6 +116,8 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/deleteMultipleBrand.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
   // Toggle sidebar
