--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
@@ -71,7 +71,11 @@
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
-                <th>ID</th>
+                <th>
+                    <input type="checkbox" id="selectAll" class="form-check-input">
+                    <i class="bi bi-check2-square"></i>
+                </th>
+                <th>STT</th>
                 <th>Hình ảnh </th>
                 <th>Tên sản phẩm</th>
                 <th>Giá</th>
@@ -81,8 +85,16 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product : ${products}">
-                <td th:text="${product.productID}"></td>
+            <tr th:each="product,p : ${products}">
+                <td>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input productCheckbox" th:value="${product.productID}" id="productCheck-${p.index}">
+                        <label class="form-check-label" th:for="'productCheck-' + ${p.index}">
+                            <i class="bi bi-check-square"></i>
+                        </label>
+                    </div>
+                </td>
+                <td th:text="${p.index + 1}"></td>
                 <td><img th:src="@{${product.imageUrl}}" alt="Product Image" style="max-width: 100px; height: auto;" /></td>
                 <td th:text="${product.name}"></td>
                 <td th:text="${product.formattedPrice}"></td>
@@ -95,20 +107,11 @@
                        title="Chỉnh sửa">
                         <i class="fas fa-edit"></i>
                     </a>
-
-                    <!-- Nút Xóa (Icon thùng rác) -->
-                    <form th:action="@{/Admin/product-manager/delete/{productID}(productID=${product.productID})}"
-                          method="post"
-                          class="d-inline"
-                          onsubmit="return confirmDelete();">
-                        <button type="submit" class="btn btn-danger btn-sm" title="Xóa">
-                            <i class="fas fa-trash"></i>
-                        </button>
-                    </form>
                 </td>
             </tr>
             </tbody>
         </table>
+        <button type="button" id="deleteBtn" class="btn btn-danger btn-sm" title="Xóa" onclick="deleteSelectedProduct()">Xóa sản phẩm</button>
         <nav aria-label="Phân trang sản phẩm" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
                 <!-- Nút Previous -->
@@ -196,6 +199,8 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/deleteMultipleProduct.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
