--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -80,7 +80,10 @@
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
             <tr>
-                <th><input type="checkbox" id="selectAll"></th>
+                <th>
+                    <input type="checkbox" id="selectAll" class="form-check-input">
+                    <i class="bi bi-check2-square"></i>
+                </th>
                 <th>STT</th>
                 <th>Tên Nhân Viên</th>
                 <th>Ngày Sinh</th>
